--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "private": true,
   "workspaces": [
     "packages/foo",
-    "packages/bar"
+    "packages/bar",
+    "packages/test"
   ],
   "scripts": {
     "build": "tsc --build",
     "docs": "typedoc"
   },
   "dependencies": {
-    "typedoc": "^0.24.0",
+    "typedoc": "0.24.1",
     "typescript": "^4.9.5"
   }
 }
