--- a/packages/foo/package.json
+++ b/packages/foo/package.json
@@ -4,5 +4,8 @@
   "exports": "./dist/index.js",
   "dependencies": {
     "@typedoc/bar": "0.0.1"
+  },
+  "scripts": {
+    "docs": "typedoc"
   }
 }
