--- a/packages/bar/package.json
+++ b/packages/bar/package.json
@@ -3,6 +3,6 @@
   "version": "0.0.1",
   "exports": "./dist/index.js",
   "scripts": {
-    "docs": "typedoc"
+    "docs": "typedoc --out docs"
   }
 }
