Use meaningful names in example

--- a/packages/wrapping-lib/package.json
+++ b/packages/wrapping-lib/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@typedoc/foo",
+  "name": "@typedoc/wrapping-lib",
   "version": "0.0.2",
   "exports": "./dist/index.js",
   "dependencies": {
-    "@typedoc/bar": "0.0.1"
+    "@typedoc/lib": "0.0.1"
   },
   "scripts": {
     "docs": "typedoc --out docs"
