Attempt repro for https://github.com/Gerrit0/typedoc-plugin-missing-exports/issues/26

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "docs-all": "npm run docs --workspaces --if-present"
   },
   "dependencies": {
-    "typedoc": "^0.25.2",
+    "typedoc": "^0.25.12",
+    "typedoc-plugin-missing-exports": "^2.2.0",
     "typescript": "^5.0.4"
   }
 }
